changed dependecny version